# repast4py

./: .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  build-docker.sh  coverage.rc  dev_notes.md  pyproject.toml  requirements.txt  run-docker.sh  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: tests.yml  wheels.yml
docs/: .gitignore  conf.py  index.rst
docs/guide/: .gitignore  ascii_doc_ex.adoc  checkpointing.adoc  distributing_agents.adoc  introduction.adoc  model_101.adoc  motivation.adoc  overview.adoc  repast_components.adoc  tutorial_network.adoc  tutorial_random_walk.adoc  tutorial_zombies.adoc  user_guide.adoc
docs/source/: modules.rst  repast4py.checkpoint.rst  repast4py.context.rst  repast4py.core.rst  repast4py.geometry.rst  repast4py.logging.rst  repast4py.network.rst  repast4py.parameters.rst  repast4py.random.rst  repast4py.rst  repast4py.schedule.rst  repast4py.space.rst  repast4py.util.rst  repast4py.value_layer.rst
docs/web/: build.sh  examples_to_include  landing.adoc  macos_mpi_install.adoc
envs/: bebop_config_repast4py.sh  bebop_env.sh
examples/: .gitignore  examples.adoc
examples/diffusion/: diffusion.py  run_diffusion.py
examples/rndwalk/: random_walk.adoc  random_walk.yaml  random_walk_model.adoc  random_walk_overview.adoc  readme.md  rndwalk.py
examples/rumor/: README.md  network.txt  rumor.py  rumor_model.adoc  rumor_model.yaml  rumor_overview.adoc
examples/zombies/: readme.md  zombie_model.yaml  zombies.adoc  zombies.py  zombies_overview.adoc
paper_data/: r4py_scaling_analysis.r  runtimes_144p_3000000h_6000z.csv  runtimes_288p_3000000h_6000z.csv  runtimes_36p_3000000h_6000z.csv  runtimes_72p_3000000h_6000z.csv
scripts/: zombies.sbatch
src/repast4py/: SpatialTree.cpp  SpatialTree.h  __init__.py  borders.h  checkpoint.py  context.py  core.h  core.py  core_bindings.cpp  coremodule.cpp  coremodule.h  cspace.h  distributed_space.cpp  distributed_space.h  geometry.cpp  geometry.h  geometry.py  grid.h  logging.py  network.py  occupancy.h  parameters.py  random.py  schedule.py  space.cpp  space.h  space.py  space_types.h  spacemodule.cpp  types.h  util.py  (+1 more)
test_data/: net_with_attribs.txt  net_with_no_attribs.txt  sample_network.txt  simple_net.txt  test_params.yaml
test_models/: README.md
tests/: Makefile  checkpoint_tests.py  ctopo_tests.py  logging_tests.py  shared_network_tests.py  shared_obj_tests.py  shared_space_tests.py  shared_vl_tests.py  space_tests.cpp  space_tests.py  test.sh  test_agents.py  test_checkpoint.py  test_main.cpp  test_schedule.py  test_space.py  test_value_layer.py  util_tests.py
(+17 files in other folders)
