[flake8]
ignore = E501,W503

# setuptools packaging
[metadata]
name = repast4py
version = attr: repast4py.__version__
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
long_description = file: README.md
long_description_content_type = text/markdown
author = Nick Collier
author_email = ncollier@anl.gov
maintainer = Nick Collier
maintainer_email = ncollier@anl.gov
url = https://repast.github.io/repast4py.html
project_urls =
    Git Repostitory = https://github.com/Repast/repast4py
    Issue Tracker = https://github.com/Repast/repast4py/issues
    Documentation = https://github.com/Repast/repast4py

[options]
package_dir=
    =src
packages=find:

install_requires =
    numpy >=1.18
    numba
    mpi4py
    coverage
    torch
    networkx >=2.6.2
    pyyaml
    Cython

python_requires = >= 3.7

[options.packages.find]
where=src