[flake8]
ignore = E501,W503

[metadata]
name = repast4py
version = attr: repast4py.__version__
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing
long_description = file: README.md
long_description_content_type = text/markdown
author = Nick Collier
author_email = ncollier@anl.gov
maintainer = Nick Collier
maintainer_email = ncollier@anl.gov
url = https://repast.github.io/repast4py.site/index.html
project_urls =
    Git Repostitory = https://github.com/Repast/repast4py
    Issue Tracker = https://github.com/Repast/repast4py/issues
    Documentation =  https://repast.github.io/repast4py.site/guide/user_guide.html

[options]
package_dir=
    =src
packages=find:

install_requires =
# 1.24 currently conflicts with numba
    numpy >=1.18.0, <1.24.0
    numba
    mpi4py
    torch
    networkx >=2.6.2
    pyyaml
    Cython
    typing_extensions;python_version < "3.8.0"

python_requires = >= 3.7

[options.packages.find]
where=src